# SevenSeg

./: LICENSE  LICENSE.txt  README.md  setup.cfg
SevenSeg/: Seg.py  __init__.py
