[metadata]
name = SevenSeg
version = 0.0.1
author = Mohamed Trabelsi
author_email = metronix.contact@gmail.com
description = A package for controlling seven segment displays using raspberry pi pico 
long_description = file: README.md
long_description_content_type = text/markdown
url = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = SevenSeg
packages = find:
python_requires = >=3.7

[options.packages.find]
where = SevenSeg